# mood_music_recommender

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: README.md  index.html  main.js  package-lock.json  package.json  styles.css  vite.config.js
app/src/: App.jsx  main.jsx  styles.css
data/: README.md  mock_songs.jsonl  spotify_songs.embeddings.meta.json
plan/: music-mood-agent-v1-plan.md  vibecue-presentation-outline.md
reports/hust-baocao/: compile.sh  cover.tex  main.aux  main.lof  main.lot  main.out  main.tex  main.toc  preamble.tex  references.tex
reports/hust-baocao/chapters/: 00-loi-noi-dau.tex  01-gioi-thieu.tex  02-co-so-ly-thuyet.tex  03-thu-thap-du-lieu.tex  04-eda.tex  05-tien-xu-ly.tex  06-ung-dung.tex  (+1 more)
scripts/: __init__.py  build_embedding_cache.py  build_song_jsonl.py
spocrawl/: .gitignore  idk.py  process_and_visualize.ipynb  pyrightconfig.json  requirements.txt
spocrawl/config/: settings.py
spocrawl/docs/: buoc7_text_features.md
spocrawl/scripts/: build_audio_dataset.py  collect_balanced.py  collect_hybrid.py  count_language.py  deezer_io.py  fetch_deezer_audio.py  probe_deezer.py  probe_lyrics_sources.py
src/music_agent/: __init__.py  config.py  llm_client.py  models.py
tests/: test_agent_graph_routes.py  test_agent_nodes.py  test_agent_state.py  test_api.py  test_build_song_jsonl.py  test_config.py  test_e2e_agent_flow.py  test_fixture_store.py  test_llm_client.py  test_mcp_client.py  test_mcp_rag_tool.py  test_mcp_web_tool.py  test_models.py  test_mood_policy.py  test_prompt_contracts.py
(+45 files in other folders)
